# zks-vernam

./: Cargo.toml  wrangler.toml
.github/workflows/: deploy.yml
src/: lib.rs  vernam_session.rs
