[package]
name = "zks-vernam"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
worker = "0.7.1"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = "s"
lto = true
